--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "tsc && env-cmd nodemon ./bin/www"
+    "start": "tsc --watch | env-cmd nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
